--- a/package.json
+++ b/package.json
@@ -20,10 +20,18 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "xss-clean": "^0.1.4",
+    "xss-clean-types": "^1.0.2"
   }
 }
