--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6",
     "xss-clean": "^0.1.4",
     "xss-clean-types": "^1.0.2"
   }
